Fix: Move UI element out of /api/ path Add: Add ability to filter events via API Add: Contacts API. Add: Make tutorial resumable Add: Help page
